# Nest

./: .eslintrc.cjs  .gitignore  .vscodeignore  404.html  Cargo.toml  LICENSE  Nestfile  README.md  build-and-install.sh  cog.toml  compose.yml  example.nest  index.html  install-static.sh  install.old.sh  install.ps1  install.sh  install.static.ps1  install.static.sh  language-configuration.json  main.rs  nestfile  nestfile.example  package-lock.json  package.json  test_input.txt  test_parse_call.rs  tsconfig.json  vite.config.ts
assets/: index-BPlYMQJF.css  index-BzjplU0r.js  index-DMPX4rSZ.js  index-DfzpHpx8.css  index-vZYM2fo9.css  index-wVMFXnqx.js
crates/nest-core/: Cargo.toml
crates/nest-core/src/: constants.rs  lib.rs
crates/nest-core/src/nestparse/: args.rs  ast.rs  blocks.rs  cli.rs  codegen.rs  command_handler.rs  completion.rs  directives.rs  display.rs  env.rs  executor.rs  file.rs  handlers.rs  include.rs  input.rs  json.rs  logging.rs  merge.rs  mod.rs  output.rs  parser.rs  runtime.rs  runtime_validator.rs  standard_commands.rs  template.rs  type_validator.rs  validator.rs  watcher.rs
examples/: .env  README.md  database.nest  docker.nest  nestfile  parallel.nest  testing.nest
icons/: nest-icon-theme.json
public/: 404.html
snippets/: nest.snippets.json
src/: App.vue  codeActions.ts  codeLens.ts  completion.ts  constants.rs  definition.ts  extension.ts  fileDecoration.ts  formatting.ts  hover.ts  i18n.ts  inlayHints.ts  main  main.rs  main.ts  pathlib.rs  references.ts  symbols.ts  validator.ts
syntaxes/: nest.tmLanguage.json
(+51 files in other folders)
