[package]
name = "nest"
version = "2.2.21"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
sha2 = "0.10"

