[package]
name = "nest-core"
version = "2.3.22"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
sha2 = "0.10"
notify = "8.2.0"
glob = "0.3.3"
ureq = "3.1.4"
